--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,7 @@
 		"express": "^5.1.0",
 		"express-validator": "^7.2.1",
 		"helmet": "^8.1.0",
-		"node-fetch": "^3.3.2",
-		"ts-node": "^10.9.2"
+		"ts-node": "^10.9.2",
+		"undici": "^7.8.0"
 	}
 }
